--- a/frontend/src/components/Products/Products.module.css
+++ b/frontend/src/components/Products/Products.module.css
@@ -2,7 +2,6 @@
     width: 60vw;
     display: flex;
     flex-direction: column;
-    /* align-items: center; */
     gap: 2rem;
     background: var(--card);
     border-radius: 50px;
@@ -18,6 +17,7 @@
     gap: 2rem;
     border-radius: 20px;
     border: 2px solid var(--bold);
+    font-family: 'Quicksand', sans-serif;
 }
 
 .product:hover {
