--- a/frontend/src/components/LandingPage/LandingPage.module.css
+++ b/frontend/src/components/LandingPage/LandingPage.module.css
@@ -3,7 +3,7 @@
     display: flex;
     flex-direction: column;
     background: var(--card);
-    border-radius: 50px;
+    border-radius: 20px;
     padding: 4rem;
     gap: 2rem;
     > h1 {
@@ -26,4 +26,11 @@
 
 a:hover {
     cursor: pointer;
+}
+
+@media only screen and (max-width: 1024px) {
+    .container {
+        width: 90vw;
+        padding: 2rem;
+    }
 }
