--- a/frontend/src/components/Login/Login.module.css
+++ b/frontend/src/components/Login/Login.module.css
@@ -190,3 +190,19 @@ input:-webkit-autofill{
     font-size: var(--small-font);
     line-height: 2rem;
 }
+
+@media only screen and (min-width: 1441px) {
+    .btnGoogle, .btnFb, .loginForm button {
+        height: 70px;
+        line-height: var(--small-font);
+    }
+}
+
+@media only screen and (max-width: 1024px) {
+    .container {
+        width: 90vw;
+    }
+    .loginForm, .buttonContainer {
+        width: 100%;
+    }
+}
