--- a/frontend/src/components/OrderHistory/OrderHistory.module.css
+++ b/frontend/src/components/OrderHistory/OrderHistory.module.css
@@ -3,7 +3,7 @@
     display: flex;
     flex-direction: column;
     background: var(--card);
-    border-radius: 50px;
+    border-radius: 20px;
     padding: 4rem;
     font-size: var(--large-font);
     gap: 2rem;
@@ -41,8 +41,38 @@
 }
 
 .product img {
-    height: 10rem;
-    width: 10rem;
+    height: calc(10rem + 5vw);
+    width: calc(10rem + 5vw);
     border-radius: 20px;
     padding: 5px;
+}
+
+@media only screen and (max-width: 1024px) {
+    .container {
+        width: 90vw;
+    }
+}
+
+@media only screen and (max-width: 600px) {
+    .container {
+        padding: 2rem;
+        gap: 1rem;
+        width: 100%;
+    }
+    .product {
+        gap: 1rem;
+    }
+    .product img {
+        width: calc(5rem + 5vw);
+        height: calc(5rem + 5vw);
+    }
+    .productInfo h3 {
+        margin-bottom: 0;
+        font-size: var(--small-font);
+        line-height: calc(var(--small-font) + 2vw);
+    }
+    .productInfo h5 {
+        font-size: calc(var(--small-font) - 1vw);
+        line-height: calc(var(--small-font));
+    }
 }
