--- a/frontend/src/components/Product/Product.module.css
+++ b/frontend/src/components/Product/Product.module.css
@@ -4,7 +4,7 @@
     flex-direction: column;
     gap: 2rem;
     background: var(--card);
-    border-radius: 50px;
+    border-radius: 20px;
     padding: 4rem;
     font-size: var(--large-font);
 }
@@ -25,13 +25,14 @@
         font-weight: 600;
     }
     > h5 {
+        margin-top: 1rem;
         font-size: var(--medium-font);
     }
 }
 
 .product img {
-    height: 10rem;
-    width: 10rem;
+    height: calc(10rem + 5vw);
+    width: calc(10rem + 5vw);
     border-radius: 20px;
     padding: 5px;
 }
@@ -47,4 +48,37 @@
     color: var(--dark-background);
     font-family: 'Quicksand', sans-serif;
     cursor: pointer;
+}
+
+@media only screen and (min-width: 1441px) {
+    .cartBtn {
+        height: 70px;
+    }
+}
+
+@media only screen and (max-width: 1024px) {
+    .container {
+        width: 90vw;
+    }
+}
+
+@media only screen and (max-width: 600px) {
+    .container {
+        padding: 2rem;
+        gap: 1rem;
+    }
+    .product {
+        gap: 1rem;
+    }
+    .product img {
+        width: calc(5rem + 5vw);
+        height: calc(5rem + 5vw);
+    }
+    .productInfo h3 {
+        margin-bottom: 0;
+    }
+    .productInfo h5 {
+        margin: 0;
+        line-height: calc(var(--medium-font) + 2vw);
+    }
 }
