--- a/frontend/src/components/Products/Products.module.css
+++ b/frontend/src/components/Products/Products.module.css
@@ -4,7 +4,7 @@
     flex-direction: column;
     gap: 2rem;
     background: var(--card);
-    border-radius: 50px;
+    border-radius: 20px;
     padding: 4rem;
     font-size: var(--large-font);
 }
@@ -28,6 +28,7 @@
 .productInfo {
     > h3 {
         font-weight: 600;
+        margin-bottom: 2rem;
     }
     > h5 {
         font-size: var(--medium-font);
@@ -35,8 +36,8 @@
 }
 
 .product img {
-    height: 10rem;
-    width: 10rem;
+    height: calc(10rem + 5vw);
+    width: calc(10rem + 5vw);
     border-radius: 20px;
     padding: 5px;
 }
@@ -46,4 +47,27 @@
     color: var(--text);
     margin: 0;
     padding: 0;
+}
+
+@media only screen and (max-width: 1024px) {
+    .container {
+        width: 90vw;
+    }
+}
+
+@media only screen and (max-width: 600px) {
+    .container {
+        padding: 2rem;
+        gap: 1rem;
+    }
+    .product {
+        gap: 1rem;
+    }
+    .product img {
+        width: calc(5rem + 5vw);
+        height: calc(5rem + 5vw);
+    }
+    .productInfo h3 {
+        margin-bottom: 0;
+    }
 }
